...
                style="@style/label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sp_name_label" />

            <EditText
                android:id="@+id/aliasEdit"
                style="@style/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sp_name_hint" />

            <!-- Server URL -->
...
                style="@style/label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sp_url_label" />

            <EditText
                android:id="@+id/serverUrlEdit"
                style="@style/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sp_url_hint" />

            <!-- Organization -->
...
                style="@style/label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sp_org_label" />

            <EditText
                android:id="@+id/organizationEdit"
                style="@style/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sp_organization_hint" />

            <!-- Username -->
...
                style="@style/label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sp_username_label" />

            <EditText
                android:id="@+id/usernameEdit"
                style="@style/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sp_username_hint" />

            <!-- Password -->
...
                style="@style/label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sp_password_label" />

            <EditText
                android:id="@+id/passwordEdit"
                style="@style/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sp_password_hint"
                android:password="true" />

            <CheckBox
                android:id="@+id/askPasswordCheckBox"
                style="@style/serverProfile.checkBox"
                android:checked="false"
                android:onClick="onAskPasswordCheckboxClicked"
                android:text="@string/sp_ask_password_text" />
            <!-- Save Button -->
            <Button
...
