...
    <string name="spm_delete_btn">Delete</string>
    <string name="spm_cancel_btn">Cancel</string>


    <!-- Server Profile Activity -->
    <string name="sp_bc_add_profile">New Server Profile</string>
    <string name="sp_bc_edit_profile">Edit Server Profile</string>
    <string name="sp_name_label">Name:</string>
    <string name="sp_name_hint">my server name</string>
    <string name="sp_url_label">Server URL:</string>
    <string name="sp_url_hint">http://myserver.com</string>
    <string name="sp_org_label">Organization:</string>
    <string name="sp_organization_hint">organization id</string>
...
